@@ -27,14 +27,14 @@ public enum ProtocolVersionOption
    * The next version of the Rest.li protocol is the version currently under development. This option should typically
    * NOT be used for production services.
    * CAUTION: this can cause requests to fail if the server does not understand the next version of the protocol.
-   * "Next version" is defined as {@link com.linkedin.restli.common.internal.AllProtocolVersions#NEXT_PROTOCOL_VERSION}.
+   * "Next version" is defined as {@link com.linkedin.restli.internal.common.AllProtocolVersions#NEXT_PROTOCOL_VERSION}.
    */
   FORCE_USE_NEXT,
 
   /**
    * Use the latest version of the Rest.li protocol to encode requests, regardless of the version running on the server.
    * CAUTION: this can cause requests to fail if the server does not understand the latest version of the protocol.
-   * "Latest version" is defined as {@link com.linkedin.restli.common.internal.AllProtocolVersions#LATEST_PROTOCOL_VERSION}.
+   * "Latest version" is defined as {@link com.linkedin.restli.internal.common.AllProtocolVersions#LATEST_PROTOCOL_VERSION}.
    */
   FORCE_USE_LATEST,
 
@@ -44,9 +44,9 @@ public enum ProtocolVersionOption
    * If the server version is greater then the next Rest.li protocol version then fail the request.
    * If the server is between the default and the latest version then use the server version to encode the request.
    * If the server version is greater than or equal to the latest protocol version then use that to encode the request.
-   * "Default version" is defined as {@link com.linkedin.restli.common.internal.AllProtocolVersions#DEFAULT_PROTOCOL_VERSION}.
-   * "Latest version" is defined as {@link com.linkedin.restli.common.internal.AllProtocolVersions#LATEST_PROTOCOL_VERSION}.
-   * "Next version" is defined as {@link com.linkedin.restli.common.internal.AllProtocolVersions#NEXT_PROTOCOL_VERSION}.
+   * "Default version" is defined as {@link com.linkedin.restli.internal.common.AllProtocolVersions#DEFAULT_PROTOCOL_VERSION}.
+   * "Latest version" is defined as {@link com.linkedin.restli.internal.common.AllProtocolVersions#LATEST_PROTOCOL_VERSION}.
+   * "Next version" is defined as {@link com.linkedin.restli.internal.common.AllProtocolVersions#NEXT_PROTOCOL_VERSION}.
    */
   USE_LATEST_IF_AVAILABLE
 }
