@@ -9,7 +9,7 @@ import com.linkedin.data.template.DataTemplateUtil;
 import com.linkedin.restli.common.ComplexResourceKey;
 import com.linkedin.restli.common.CompoundKey;
 import com.linkedin.restli.common.ProtocolVersion;
-import com.linkedin.restli.common.internal.AllProtocolVersions;
+import com.linkedin.restli.internal.common.AllProtocolVersions;
 import com.linkedin.restli.internal.common.URLEscaper;
 
 import java.lang.reflect.InvocationTargetException;
